--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <h1>Hola bro</h1>
 
-<extra-component></extra-component>
-<app-extr2></app-extr2>
-<app-botones></app-botones>
+<app-form2></app-form2>
