--- a/src/app/add-messages/add-messages.component.html
+++ b/src/app/add-messages/add-messages.component.html
@@ -1,5 +1,6 @@
 <form (ngSubmit)="addMessage()">
     <input type="text" name="message" [(ngModel)]="message">
+    <input type="text" name="message_second" [(ngModel)]="message_second">
     <button>Agregar</button>
 </form>
 <br>
