--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<h1>Hola bro</h1>
+<h1>Hola Mundo</h1>
 <!-- 
 <input type="text" class="form-control" [(ngModel)]="title">
 <app-children [(title)]="title"></app-children>
  -->
 
-<!--  <app-add-messages></app-add-messages>
- <app-list-messages></app-list-messages> -->
-<nav>
+ <app-add-messages></app-add-messages>
+ <app-list-messages></app-list-messages>
+<!-- <nav>
     <ul>
         <li>
             <a routerLink="home" routerLinkActive="active">home</a>
@@ -19,5 +19,5 @@
         </li>
     </ul>
 </nav>
-
+ -->
  <router-outlet></router-outlet>
